docs/styling.css
body 
{
  margin: 0;
  color: #000000;
  font-family: Roman, serif;
  font-size: 1vw;
}
p
{
    text-align:center;
    font-size: 16pt;
}
ul 
{
    list-style-type: none;
    margin: 0;
    padding: 0;
    position: fixed;
}
a 
{
  color: #289a1c;
}
li a 
{
    font-family: Georgia;
    font-size: 2.5vw;
    display: block;
    color: #6ee189;
    padding: 8px 0 8px 12px;
    text-decoration: none;
    padding-left:2vw;
    
}
li a:visited 
{
    background-color: #4CAF50;
    color: #FFFFFF;
}
li a:hover 
{
    background-color: #78cecb;
    color: #000000;
}
h1.header
{
    text-align:center;
    color:#35fa52;
    font-size:42pt;
}

h2
{
    text-align:center;
    font-size:2vw;
}
.wrap 
{
  display: flex;
  background-image: url("images/stockBck.jpg");
  background-repeat: repeat;
  background-position: center;
  background-size: 80%;
  background-attachment: scroll;
}

#sidebar 
{
  background-color: #000000;
  flex: 1;
  font-size: 1vw;
}

.content 
{
  flex: 5;
  padding: 12px;
}

.container 
{
  border: 1px solid #ccc;
  padding: 10px;
  margin: 100px auto; /* Centering the container horizontally */
  background-color: #FFFFFF;
  max-width: 800px; /* Adjust this width as per your preference */
}
.head 
{
  border: 1px solid #ccc;
  padding: 10px;
  margin: 100px auto; /* Centering the container horizontally */
  background-color: #000000;
  max-width: 700px; /* Adjust this width as per your preference */
}
.headCont 
{
  border: 1px solid #ccc;
  padding: 10px;
  margin: 100px auto; /* Centering the container horizontally */
  background-color: #000000;
  max-width: 350px; /* Adjust this width as per your preference */
}
img 
{
  width: 100%;
  max-width: 1000px;
  display: block;
  margin-left: auto;
  margin-right:auto;
}
img.logo 
{
  max-width: 300px;
  display: block;
  margin-left: auto;
  margin-right:auto;
}
img.git 
{
  width: 100%;
  max-width: 500px;
  display: block;
  margin-left: auto;
  margin-right:auto;
}
figcaption 
{
  font-size:small;
  margin-top: 2%;
  margin-bottom: 5%;
  color: #3b73f3;
  text-align: center; /* Centering the text */
  padding: 8px; /* Add padding for the box */
  border: 1px solid #ccc;
  margin: 20px auto; /* Centering the container horizontally */
  background-color: #FFFFFF;
  max-width: 175px; /* Adjust this width as per your preference */
}
/* Define the code box */
.code-box 
{
  background-color: #f4f4f4;
  padding: 20px;
  border-radius: 5px;
  margin: 20px;
  overflow-y: auto; /* Enable vertical scrollbar if needed */
  max-height: 200px; /* Set maximum height */
}

/* Preserve formatting within the code block */
.code-box pre 
{
  white-space: pre-wrap;
}

